# visidata-talk

./: .gitignore  README.md  devenv.nix  passenger-cars-by-model.xlsx  pyproject.toml
VisiData Introduction.iapresenter/: info.json  text.md
