[tool.poetry]
name = "visidata-talk"
version = "0.1.0"
description = ""
authors = ["Michael Twomey <mick@twomeylee.name>"]
readme = "README.md"
packages = [{include = "visidata_talk"}]

[tool.poetry.dependencies]
python = "^3.11"
visidata = "^2.11"
iso8601 = "^1.1.0"
openpyxl = "^3.1.1"
xlrd = "^2.0.1"
seaborn = "^0.12.2"
matplotlib = "^3.7.0"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
# ruff = "^0.0.247"
mypy = "^1.0.0"
black = "^23.1.0"
# maturin = "^0.14.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
